--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -3,6 +3,7 @@ input[type="number"],
 input[type="password"],
 input[type="email"],
 input[type="checkbox"],
+input[name="filters"],
 [type="datetime-local"],
 [type="date"],
 textarea {
@@ -16,6 +17,7 @@ input[type="password"],
 input[type="number"],
 input[type="email"],
 input[type="checkbox"],
+input[name="filters"],
 [type="datetime-local"],
 [type="date"],
 textarea {
