--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,3 +1,7 @@
+:root {
+  --highlight: #f2b349;
+}
+
 .route-card {
   min-height: 120px;
 }
@@ -38,4 +42,56 @@
 }
 .modal-container {
   height: fit-content;
+}
+
+.height-50 {
+  height: 75px;
+  padding-left: 20%;
+}
+
+.left-lining {
+  width: 20%;
+  border-right: 3px solid var(--highlight);
+}
+
+.right-lining {
+  min-width: 80%;
+  width: fit-content;
+}
+
+.timelinecard {
+  min-height: 210px;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.card-time {
+  position: absolute;
+  left: -70px;
+  top: 32px;
+}
+
+.card-ring {
+  position: absolute;
+  left: 0px;
+  top: 20px;
+  transform: translate(-50%);
+  height: 50px;
+  width: 50px;
+  border: 3px solid var(--highlight);
+  border-radius: 50%;
+  background: white;
+}
+
+.date-stamp {
+  position: relative;
+  left: -80px;
+  width: 160px;
+}
+
+.seat-blank {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #ecf3ff;
 }
