--- a/src/styles/topsidebar.css
+++ b/src/styles/topsidebar.css
@@ -23,13 +23,15 @@
   transition: 0.2s ease-in-out;
   z-index: 1;
 }
-
-.nav-button {
-  width: 49%;
-  height: 60px;
+.top-negative {
   position: relative;
   z-index: 0;
   top: -25px;
+}
+.nav-button {
+  width: 49%;
+  height: 60px;
+
   font-weight: 600;
 }
 
