--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -49,8 +49,13 @@
   padding-left: 20%;
 }
 
+.btn-height {
+  height: 35px !important;
+  padding: 5px;
+}
 .left-lining {
   width: 20%;
+  margin-left: 10px;
   border-right: 3px solid var(--highlight);
 }
 
@@ -64,9 +69,11 @@
   border-radius: 5px;
 }
 .timelinecard {
-  min-height: 210px;
-  width: 100%;
+  position: relative;
+  min-height: 50px;
+  width: 98%;
   border-radius: 5px;
+  padding-bottom: 14px;
 }
 
 .card-time {
@@ -91,6 +98,12 @@
   position: relative;
   left: -80px;
   width: 160px;
+}
+
+.timeline-tag {
+  position: relative;
+  left: -60px;
+  width: 120px;
 }
 
 .seat-blank {
