--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -55,7 +55,7 @@
 }
 .left-lining {
   width: 20%;
-  margin-left: 10px;
+  margin-left: 30px;
   border-right: 3px solid var(--highlight);
 }
 
@@ -64,14 +64,14 @@
   width: fit-content;
 }
 .timelinecard-market {
-  min-height: 180px;
+  min-height: 90px;
   width: 100%;
   border-radius: 5px;
 }
 .timelinecard {
   position: relative;
   min-height: 50px;
-  width: 98%;
+  width: 100%;
   border-radius: 5px;
   padding-bottom: 14px;
 }
@@ -111,4 +111,13 @@
   height: 25px;
   border-radius: 50%;
   background: #ecf3ff;
+}
+
+.screen-overlap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0%;
+  z-index: 0;
 }
