--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -72,6 +72,7 @@
   position: relative;
   min-height: 50px;
   width: 100%;
+  max-width: 400px;
   border-radius: 5px;
   padding-bottom: 14px;
 }
