--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -7,6 +7,7 @@
   min-height: 120px;
   border-radius: 5px;
   background: var(--card-bg);
+  max-width: 420px;
 }
 
 .cards {
@@ -40,11 +41,10 @@
   overflow: auto;
 }
 
-.scroll {
-  position: relative;
-}
 .modal-container {
   height: fit-content;
+  min-width: 85%;
+  max-width: 400px;
 }
 
 .height-50 {
@@ -81,7 +81,14 @@
   padding-bottom: 14px;
   background: var(--card-bg) !important;
 }
-
+.feed-card {
+  width: 100%;
+  height: fit-content;
+}
+.feed-card image {
+  width: 30px !important;
+  height: 30px !important;
+}
 .card-time {
   position: absolute;
   left: -70px;
